# surena_choreonoid_ros

./: .gitignore  COM.csv  COMDot.csv  EKFEstimator.cpp  EKFEstimator.h  README.md  ZMP.csv  lFoot.csv  rFoot.csv  xi.csv  xiDot.csv
bullet_sim/: CMakeLists.txt  package.xml
bullet_sim/scripts/: bullet_main.py
bullet_sim/srv/: Walk.srv
keyboard_teleop/: CMakeLists.txt
keyboard_teleop/src/: KeyboardTeleop.cpp
model/SurenaV/: CMakeLists.txt  GR001Surena.body  package.xml  surena.body  surena1.body  surena5.wrl  urdf_test.ipynb
project/: SR1_SurenaV.body  SurenaV-wrl-house.cnoid  SurenaV-wrl.cnoid  SurenaV.cnoid  sr1.cnoid  sr1_SurenaV.cnoid  surenaiv-wrl.cnoid  surenaiv.cnoid  surenav1.cnoid
surena_simulation/: CMakeLists.txt  package.xml
surena_simulation/config/: obstacles.txt  sole.txt  sole_bullet.txt  sole_choreonoid.txt
surena_simulation/include/surena_simulation/: BumpSensor.h  Obstacle.h
surena_simulation/launch/: rtabmap.launch
surena_simulation/src/: BumpSensor.cpp  CMakeLists.txt  CameraController.cpp  Obstacle.cpp  SurenaController.cpp
surena_simulation/srv/: bump.srv
trajectory_planner/: CMakeLists.txt  package.xml
trajectory_planner/config/: config.yaml
trajectory_planner/scripts/: gazebo.py  visOdomSub.py
trajectory_planner/src/: Ankle.cpp  AnkleTraj.cpp  Controller.cpp  DCM.cpp  EKFEstimator.cpp  FootStepPlanner.cpp  GeneralMotion.cpp  LieEKF.cpp  Link.cpp  MinJerk.cpp  PID.cpp  PreviewTraj.cpp  QuatEKF.cpp  Robot.cpp  ZMPPlanner.cpp  riccati_solver.cpp  utils.cpp
trajectory_planner/srv/: COMController.srv  DCMController.srv  (+2 more)
(+33 files in other folders)
